# splittin

./: Cargo.toml
.cargo/: config.toml
assets/levels/: level_1.tmx
assets/sounds/: ball_hit.flac
src/: main.rs
src/in_game/: ammo_ball.rs  ball.rs  camera.rs  input.rs  mod.rs  player.rs  stationary_ball.rs
src/in_game/balls/: ammo_ball.rs  audio.rs  initial_velocity.rs  level_ball.rs  mod.rs  particles.rs
src/in_game/levels/: mod.rs
